modules/network/vpc/vpc.tf
resource "aws_vpc" "this"{
  cidr_block = var.vpc_cidr
  enable_dns_support  = true
  enable_dns_hostnames = true     
  tags = merge(var.tags,{Name = var.name})
        
}
